<resources>
    <string name="app_name">DiapasonM</string>
    <string name="a4_hz">a4 (Hz):</string>
    <string name="duration_sec">duration (sec):</string>
    <string name="stop">stop</string>
    <string name="c">C</string>
    <string name="f_u266f_g_u266d">F♯/G♭</string>
    <string name="g">G</string>
    <string name="g_u266f_a_u266d">G♯/A♭</string>
    <string name="f">F</string>
    <string name="c_u266f_d_u266d">C♯/D♭</string>
    <string name="d_u266f_e_u266d">D♯/E♭</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="a">A</string>
    <string name="a_u266f_b_u266d">A♯/B♭</string>
    <string name="b">B</string>

    <string-array name="freq_array" >
        <item>"a4 = 392Hz"</item>
        <item>"a4 = 393Hz"</item>
        <item>"a4 = 394Hz"</item>
        <item>"a4 = 395Hz"</item>
        <item>"a4 = 396Hz"</item>
        <item>"a4 = 397Hz"</item>
        <item>"a4 = 398Hz"</item>
        <item>"a4 = 399Hz"</item>
        <item>"a4 = 400Hz"</item>
        <item>"a4 = 401Hz"</item>
        <item>"a4 = 402Hz"</item>
        <item>"a4 = 403Hz"</item>
        <item>"a4 = 404Hz"</item>
        <item>"a4 = 405Hz"</item>
        <item>"a4 = 406Hz"</item>
        <item>"a4 = 407Hz"</item>
        <item>"a4 = 408Hz"</item>
        <item>"a4 = 409Hz"</item>
        <item>"a4 = 410Hz"</item>
        <item>"a4 = 411Hz"</item>
        <item>"a4 = 412Hz"</item>
        <item>"a4 = 413Hz"</item>
        <item>"a4 = 414Hz"</item>
        <item>"a4 = 415Hz"</item>
        <item>"a4 = 416Hz"</item>
        <item>"a4 = 417Hz"</item>
        <item>"a4 = 418Hz"</item>
        <item>"a4 = 419Hz"</item>
        <item>"a4 = 420Hz"</item>
        <item>"a4 = 421Hz"</item>
        <item>"a4 = 422Hz"</item>
        <item>"a4 = 423Hz"</item>
        <item>"a4 = 424Hz"</item>
        <item>"a4 = 425Hz"</item>
        <item>"a4 = 426Hz"</item>
        <item>"a4 = 427Hz"</item>
        <item>"a4 = 428Hz"</item>
        <item>"a4 = 429Hz"</item>
        <item>"a4 = 430Hz"</item>
        <item>"a4 = 431Hz"</item>
        <item>"a4 = 432Hz"</item>
        <item>"a4 = 433Hz"</item>
        <item>"a4 = 434Hz"</item>
        <item>"a4 = 435Hz"</item>
        <item>"a4 = 436Hz"</item>
        <item>"a4 = 437Hz"</item>
        <item>"a4 = 438Hz"</item>
        <item>"a4 = 439Hz"</item>
        <item>"a4 = 440Hz"</item>
        <item>"a4 = 441Hz"</item>
        <item>"a4 = 442Hz"</item>
        <item>"a4 = 443Hz"</item>
        <item>"a4 = 444Hz"</item>
        <item>"a4 = 445Hz"</item>
        <item>"a4 = 446Hz"</item>
        <item>"a4 = 447Hz"</item>
        <item>"a4 = 448Hz"</item>
        <item>"a4 = 449Hz"</item>
        <item>"a4 = 450Hz"</item>
        <item>"a4 = 451Hz"</item>
        <item>"a4 = 452Hz"</item>
        <item>"a4 = 453Hz"</item>
        <item>"a4 = 454Hz"</item>
        <item>"a4 = 455Hz"</item>
        <item>"a4 = 456Hz"</item>
        <item>"a4 = 457Hz"</item>
        <item>"a4 = 458Hz"</item>
        <item>"a4 = 459Hz"</item>
        <item>"a4 = 460Hz"</item>
        <item>"a4 = 461Hz"</item>
        <item>"a4 = 462Hz"</item>
        <item>"a4 = 463Hz"</item>
        <item>"a4 = 464Hz"</item>
        <item>"a4 = 465Hz"</item>
        <item>"a4 = 466Hz"</item>
        <item>"a4 = 467Hz"</item>
        <item>"a4 = 468Hz"</item>
        <item>"a4 = 469Hz"</item>
        <item>"a4 = 470Hz"</item>
        <item>"a4 = 471Hz"</item>
        <item>"a4 = 472Hz"</item>
        <item>"a4 = 473Hz"</item>
        <item>"a4 = 474Hz"</item>
        <item>"a4 = 475Hz"</item>
        <item>"a4 = 476Hz"</item>
        <item>"a4 = 477Hz"</item>
        <item>"a4 = 478Hz"</item>
        <item>"a4 = 479Hz"</item>
        <item>"a4 = 480Hz"</item>
        <item>"a4 = 481Hz"</item>
        <item>"a4 = 482Hz"</item>
        <item>"a4 = 483Hz"</item>
        <item>"a4 = 484Hz"</item>
        <item>"a4 = 485Hz"</item>
        <item>"a4 = 486Hz"</item>
        <item>"a4 = 487Hz"</item>
        <item>"a4 = 488Hz"</item>
        <item>"a4 = 489Hz"</item>
    </string-array>

    <string-array name="dur_array" >
        <item>"1 sec"</item>
        <item>"2 sec"</item>
        <item>"5 sec"</item>
        <item>"10 sec"</item>
    </string-array>

</resources>