<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/freqSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent"
                android:entries="@array/freq_array"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/durSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent"
                android:entries="@array/dur_array"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/stopBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="64dp"
                android:text="@string/stop" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/c"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/c_u266f_d_u266d"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/d"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/d_u266f_e_u266d"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/e"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/f"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/f_u266f_g_u266d"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/g"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/g_u266f_a_u266d"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/a"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/a_u266f_b_u266d"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/b"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>